--- a/pages/mock.html
+++ b/pages/mock.html
@@ -3,3 +3,127 @@ title: Ernest Thornton Mock
 layout: about
 permalink: /mock.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Ernest Thornton Mock</b></p></h4>
+    <br>
+    <em>1886-1950</em>
+    <br>
+    <p>Lost Tacoma Locations: 
+    <br>    
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a>
+    <br>    
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>
+    <br>    
+    <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA">Talmud Torah Synagogue</a></p>
+    <br>
+    <p>Ernest Thornton Mock is one of the few other architects in this collection that were born in Tacoma. Mock apprenticed for twelve years under Bullard & Russell before partnering with Irwin H. Hill and Jack Griffin in 1918. When Griffin left to pursue contracts in Lewis County, he was replaced by Nelson J. Morrison and shared a space in the Perkins Building. Mock's death in 1950 inspired the 88th annual reunion of the Scottish Rite Masons in Tacoma, to honor his 25 years of service. </p>
+    <br>
+    <p>Other Work: 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/847/rec/30">Fire Station No. 12</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20159/rec/40">Foster & Kleiser Investment Co.</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20233/rec/54">Tillicum Toy Co.</a> </p>
+    <br>
+    <sub>Sources: College Park Historic District National Register of Historic Places Nomination - Page 14, “PCAD - Ernest Thornton Mock Sr.”, “Richards Studio D141770-15.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - February 16, 1925 - Page 10,”, "Tribune (published as THE TACOMA NEWS TRIBUNE) - April 25, 1950 - page 9"</sub>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=mock"><img src="https://aweymo.github.io/losttacoma/objects/p_mock.jpeg" alt="Ernest Thornton Mock" style="max-width:100%;object-fit: contain;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
+    <br>
+    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+    <br>  
+    Courtesy Northwest Room</sub>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
+    <br>
+    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926
+    <br>  
+    Courtesy Northwest Room</sub>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
+    <br>
+    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-12230), 
+    <br>  
+    Courtesy Northwest Room</sub>
+  </div>
+</div>
+  
+<div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_01" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
+      <br>
+      <sub>Talmud Torah Synagogue, Richards Studio (D141770-15), 05-28-1964
+      <br>  
+      Courtesy Northwest Room</sub>
+    </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
+      <br>
+      <sub>Talmud Torah Synagogue, Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
+      <br>  
+      Courtesy Northwest Room</sub>
+    </div>
+  </div>
+  
+</body>
+</html>
