--- a/pages/raleigh.html
+++ b/pages/raleigh.html
@@ -3,3 +3,79 @@ title: Wilbur C. Raleigh
 layout: about
 permalink: /raleigh.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Wilbur C. Raleigh</b></p></h4>
+    <br>
+    <em>1880-1964</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#625 COMMERCE ST, TACOMA">Comfort Station for Women</a></p>
+    <br>
+    <p>Wilbur C. Raleigh was working under Mayor Angelo V. Fawcett as a city engineer when he was commissioned to create these plans in 1910. The space was intended to utilize the wood storage room under the sidewalk at the south end of the City Hall building as a women's restroom, urged by the growing Women's Club movement happening in Tacoma at that time. The space appears to never have been constructed. Raleigh's informal technical drawing style, with what may be waxed pencil, are unique to other technical drawings in the Lost Tacoma collection. Raleigh subsequently worked as the secretary for the Havelock C. Boyle & Co. and the President of the Raleigh-Hayward Company, realtors in the Rust building.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/6482/rec/2">City Shops and Stables Building</a> </p>
+    <br>
+    <sub>Sources: Staff, Index. “Shops and Stables Building Nominated to Tacoma’s Historic Register | Tacoma Daily Index,” March 21, 2014., "The Tacoma Times (Tacoma, Washington) ·  Wed, Jul 6, 1910 ·  Page 8", “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - January 2, 1915 - Page 5,”, "Tribune (published as THE NEWS TRIBUNE) - May 5, 1922 - page 11", “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 21, 1942 - Page 18,”, "Seattle Post-Intelligencer - February 18, 1964 - page 32"</sub>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#625 COMMERCE ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_raleigh.png" alt="Wilbur C. Raleigh" style="max-width:100%;"></a>
+    <br>
+    <sub>Wilbur C. Raleigh High School Football Photo, 
+    <br>
+    Raleigh is not highlighted in cyan
+    </sub>
+  </div>
+</div>
+  
+</body>
+</html>
