--- a/pages/russell.html
+++ b/pages/russell.html
@@ -3,3 +3,115 @@ title: Ambrose James Russell
 layout: about
 permalink: /russell.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Ambrose James Russell</b></p></h4>
+    <br>
+    <em>1857-1938</em>
+    <br>
+    <p>Lost Tacoma Locations: 
+    <br>    
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA">Mottau Building</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a></p>
+    <br>
+    <p>Ambrose James (sometimes Janvier) Russell was born in Trivandrum, India to a Scottish missionary. Russell studied at the University of Glasgow and the Ecole des Beaux Arts before coming to America in 1884. In 1895, Russell was the Director of the Watercolor Sketch Club, which displayed work at the Ferry Museum (now the Washington State Historical Society) and curated work from future partner Everett Phipps Babcock. In 1896, Russell was appointed a Professor of Architecture at the University of Washington in Seattle.</p>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Ambrose%20James%20Russell"><img src="https://aweymo.github.io/losttacoma/objects/p_russell.jpeg" alt="Ambrose James Russell" style="max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <p>Russell formed partnerships with Albert Walter Spaulding and Frederick Henry Heath in 1901, Everett Phipps Babcock in 1905, H.G. Ripley in 1908, Walter E. Rice and Irving Harlan Thomas in 1908 and finally Gaston Lance, A. Gordon Lumm and Irwin Muri in 1930. Russell was a member of the American Institute of Architects, Secretary of the Tacoma Society of Architects and a Mason. When Russell passed, three of his Pallbearers were architects featured in this collection: Gaston Lance, Ernest Mock and Earl N. Dugan.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/12536/rec/20">The Rust Mansion</a>, 
+        <br>
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/30267/rec/26">Rhodes Department Store</a>, 
+        <br>
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14132/rec/4">James & Elizabeth McCormack Houseg</a> </p>
+        <br>
+        <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Ambrose J. Russell.”, “Our Tacoma Artists. Reception at the Ferry Museum - Tacoma Daily News - July 5, 1895 - Page [3],”, “PCAD - Ambrose James Russell.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 19, 1938 - Page 1,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 11, 1936 - Page 2,”“Tribune (Published as The Tacoma Sunday Ledger AND THE TACOMA NEWS TRIBUNE) - March 20, 1938 - Page 15,”, “Tribune (Published as The Tacoma Sunday Ledger AND THE TACOMA NEWS TRIBUNE) - October 17, 1937 - Page 28,”</sub>
+        <br>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
+    <br>
+    <sub>Mottau Building, Historic Property Inventory Forms (BU-3659), 06-30-1993
+    <br>  
+    Courtesy Northwest Room</sub>
+  </div>
+</div>
+
+<div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+        <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
+        <br>
+        <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
+        <br>
+        Courtesy Northwest Room</sub>
+    </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+        <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
+        <br>
+        <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, 
+        <br>
+        Courtesy Northwest Room</sub>
+    </div>
+  </div>
+  
+</body>
+</html>
