dugan no commas

--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -62,13 +62,13 @@ permalink: /dugan.html
     <br>
     <p>Lost Tacoma Locations: 
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>, 
+    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>, 
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a>,
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a>
     <br> 
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt117">Visitation Academy</a>, 
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt117">Visitation Academy</a> 
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">Washington Hardware Company Remodel</a> </p>
     <br>
@@ -84,9 +84,9 @@ permalink: /dugan.html
   <div class="column left" style="background-color:#FFFFFF;">
     <p>Other Work: 
     <br> 
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/5295/rec/1">Fidelity Trust Company, Office Building, Downtown, Tacoma, WA (1890) demolished</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/5295/rec/1">Fidelity Trust Company, Office Building, Downtown, Tacoma, WA (1890) demolished</a> 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/1567/rec/3"> Wright, Annie, Seminary #2, Tacoma, WA (1923-1924)</a> </p>
     <br>
