dugan cap cleanup

--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -107,14 +107,14 @@ permalink: /dugan.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
-    <sub>Donnelly Site Hotel, TPL Historic Building Files (BU-11892), 
+    <sub>Point Defiance Pavilion, Richards Studio (D34612-73), ca. 1934, 
     <br>
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
-    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), ca. 1934, 
+    <sub>Point Defiance Pavilion, Richards Studio (D7207-6), 04-24-1938, 
     <br>
     Courtesy Northwest Room</sub>
   </div>
@@ -124,7 +124,7 @@ permalink: /dugan.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
     <br>
-    <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, 
+    <sub>Donnelly Hotel Site, TPL Historic Building Files (BU-11892), 1938-04-24, 
     <br>
     Courtesy Northwest Room</sub>
   </div>
