--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -3,3 +3,117 @@ title: Albert Sutton
 layout: about
 permalink: /sutton.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Albert Sutton</b></p></h4>
+    <br>
+    <em>1867-1923</em>
+    <br>
+    <p>Lost Tacoma Locations: 
+    <br>  
+    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#934-36 BROADWAY, TACOMA">New York Waist House</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt100">Scandinavian American Bank Hotel</a></p>
+    <br>
+    <p>Albert Sutton was born in Victoria, British Columbia, raised in Portland, Oregon and graduated from the University of California in Berkeley. His first architectural partnership was with James Pickles in 1888, followed by a brief collaboration with Ambrose Russell which lasted only two years when Sutton relocated to San Francisco. When he returned to Tacoma, Sutton formed a partnership with Harrison A. Whitney and Earl Dugan in 1912. This partnership would last until 1923 when Sutton would die suddenly from heart failure. Albert Sutton was a 33rd degree Mason, the highest rank within the organization.</p>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Albert%20Sutton"><img src="https://aweymo.github.io/losttacoma/objects/p_sutton.jpeg" alt="Albert Sutton" style="max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <p>Other Work: 
+        <br>    
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/3986/rec/2">Jonathan Smith Building</a>, 
+        <br>
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/11105/rec/8">Corydon Wagner House</a>, 
+        <br>
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/6242/rec/16">Albert K. Hiscock House</a> </p>
+        <br>
+        <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Albert Sutton.”, “PCAD - Albert Sutton.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 19, 1923 - Page 2,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”</sub>
+        <br>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
+    <br>
+    <sub>Donnelly Hotel Site, TPL Historic Building Files (BU-11892), 1938-04-24, 
+    <br>
+    Courtesy Northwest Room</sub>
+  </div>
+</div>
+  
+<div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+        <a> href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
+    <br>
+    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
+    <br>
+    Courtesy Northwest Room</sub>
+    </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
+      <br>
+      <sub>New York Waist House, TPL Historic Building Files (BU-12524), 05-04-1927
+      <br>
+      Courtesy Northwest Room</sub>
+    </div>
+  </div>
+
+</body>
+</html>
