--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -3,3 +3,100 @@ title: Harrison Allen Whitney
 layout: about
 permalink: /whitney.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Harrison Allen Whitney</b></p></h4>
+    <br>
+    <em>1877-1956</em>
+    <br>
+    <p>Lost Tacoma Locations: 
+    <br>  
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#934-36 BROADWAY, TACOMA">New York Waist House</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt100">Scandinavian American Bank Hotel</a></p>
+    <br>
+    <p>Harrison Allen Whitney was born in Osage, Iowa and graduated from the Massachusetts Institute of Technology in architecture. After working in Boston and Chicago, Whitney moved to Portland, Oregon as head draftsman for Whidden & Lewis. This position led to Whitney contributing designs for the Lewis and Clark Exposition and the Multnomah County Courthouse. In 1912, Whitney partnered with Albert Sutton and would retain Sutton's name in his architectural firm long after his death in 1923.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20483/rec/10">Annie Wright Seminary</a>
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18848/rec/43">National Bank of Washington</a> 
+    <br>
+    <a href="https://npgallery.nps.gov/GetAsset/9a91cf62-01a2-4c48-888b-3ee8deddbc6e">Hoquiam Masonic Temple</a> </p>
+    <br>
+    <sub>Sources: “PCAD - Harrison Allen Whitney.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”</sub>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a> href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
+    <br>
+    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
+    <br>
+    Courtesy Northwest Room</sub>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
+    <br>
+    <sub>New York Waist House, TPL Historic Building Files (BU-12524), 05-04-1927
+    <br>
+    Courtesy Northwest Room</sub>
+  </div>
+</div>
+  
+</body>
+</html>
