--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -67,6 +67,14 @@ permalink: /flickinger.html
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32495/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/p_flickinger.jpg" alt="Harry E. Flickinger" style="max-width:100%;"></a>
   </div>
 </div>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052"><img src="https://aweymo.github.io/losttacoma/objects/ ext_garage" alt="Garage for Jail and Public Safety Building" style="max-width:100%;"></a>
+  </div>
+</div>
   
 </body>
 </html>
