--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -58,7 +58,9 @@ permalink: /griffin.html
     <br>
     <em>1892-1951</em>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
+    <p>Lost Tacoma Locations: 
+    <br>  
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
     <br>
     <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. After moving to Seattle, Griffin formed a partnership with Irwin H. Hill, Arnott Woodroofe and later with Ernest T. Mock. When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
     <br>
