griffin no commas

--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -66,9 +66,9 @@ permalink: /griffin.html
     <br>
     <p>Other Work: 
     <br>  
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4192/rec/28">Fife Civic Auditorium</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4192/rec/28">Fife Civic Auditorium</a>
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/14155/rec/26">Temple Beth Israel</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/14155/rec/26">Temple Beth Israel</a>
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36432/rec/2">The Salvation Army</a> </p>
     <br>
