heath no commas

--- a/pages/heath.html
+++ b/pages/heath.html
@@ -66,9 +66,9 @@ permalink: /heath.html
     <br>
     <p>Other Work: 
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a> 
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9603/rec/3">First Church of Christ, Scientist</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9603/rec/3">First Church of Christ, Scientist</a>
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/5834/rec/5">Stadium High School</a> </p>
     <br>
