--- a/pages/hill.html
+++ b/pages/hill.html
@@ -68,9 +68,9 @@ permalink: /hill.html
     <br>
     <p>Irwin (sometimes Irwyn) Horatio Hill was born in Illinois and graduated from the University of Illinois and Chicago Art Institute. After moving to Tacoma in 1903, Hill partnered with George Bullard, then Woodroofe and Griffin, then Hill, Mock & Griffin and finally Mock & Morrison. Hill was a member of the Tacoma Park Board and the Tacoma Rotary Club.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a>, 
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a> 
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23337/rec/13">Pierce County Hospital</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23337/rec/13">Pierce County Hospital</a> 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/21953/rec/18">The Washington State Historical Building. originally The Ferry Museum </a> </p>
     <br>
