--- a/pages/russell.html
+++ b/pages/russell.html
@@ -105,11 +105,11 @@ permalink: /russell.html
         Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
-        <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
-        <br>
-        <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, 
-        <br>
-        Courtesy Northwest Room</sub>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
+      <br>
+      <sub>Point Defiance Pavilion, Richards Studio (D34612-73), ca. 1934, 
+      <br>
+      Courtesy Northwest Room</sub>
     </div>
   </div>
   
