--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -100,7 +100,7 @@ permalink: /sutton.html
   
 <div class="row">
     <div class="column left" style="background-color:#FFFFFF;">
-        <a> href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
     <br>
     <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
