--- a/pages/raleigh.html
+++ b/pages/raleigh.html
@@ -70,9 +70,9 @@ permalink: /raleigh.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#625 COMMERCE ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_raleigh.png" alt="Wilbur C. Raleigh" style="max-width:100%;"></a>
     <br>
-    <sub>Wilbur C. Raleigh High School Football Photo, 
+    <sub>Wilbur C. Raleigh (not highlighted in cyan) High School Football Photo, 
     <br>
-    Raleigh is not highlighted in cyan
+    Tacoma News Tribune, May 5, 1922
     </sub>
   </div>
 </div>
