--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -61,7 +61,9 @@ permalink: /cornils.html
     <br>
     <p>Lost Tacoma Locations:
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carsten Packing Company Coolers and Shipping Office</a> </p>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Carsten Packing Company Coolers and Shipping Office</a> </p>
     <br>
     <p>According to passages in Electrical West and American Machinist magazines, published in 1922, P.V. Cornils acted as the Carsten Packing Company in-house architect, designing various additions around the original structure. </p>
     <br>
