--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -75,7 +75,7 @@ permalink: /albertson.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="max-width:100%;object-fit: contain;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_albertson.jpeg" alt="Abraham H. Albertson" style="max-width:100%;"></a>
   </div>
 </div>
       
