--- a/pages/lance.html
+++ b/pages/lance.html
@@ -74,6 +74,10 @@ permalink: /lance.html
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Gaston%20C.%20Lance"><img src="https://aweymo.github.io/losttacoma/objects/p_lance.jpg" alt="Gaston C. Lance" style="max-width:100%;object-fit: contain;"></a>
+    <br>
+    <sub>Gaston C. Lance standing with one of his creations for Weaver Studios as the Art Director, Richards Studio (LANCE-001), c.a. 1926
+    <br>  
+    Courtesy Northwest Room</sub>
   </div>
 </div>
       
